# backend/internal/api/auth/swagger_types.go
@@ -1,7 +1,5 @@
 package auth
 
-import model "go-fiber-starter/internal/model/user"
-
 type ErrorResponse struct {
 	Flag bool   `json:"flag" example:"false"`
 	Code int    `json:"code" example:"500"`
@@ -20,9 +18,14 @@ type LoginResponse struct {
 	Time string    `json:"time" example:"2026-03-16T10:00:00Z"`
 }
 
+type UserData struct {
+	ID       string `json:"id" example:"3fa85f64-5717-4562-b3fc-2c963f66afa6"`
+	Username string `json:"username" example:"alice"`
+}
+
 type UserResponse struct {
-	Flag bool       `json:"flag" example:"true"`
-	Code int        `json:"code" example:"200"`
-	Data model.User `json:"data"`
-	Time string     `json:"time" example:"2026-03-16T10:00:00Z"`
+	Flag bool     `json:"flag" example:"true"`
+	Code int      `json:"code" example:"200"`
+	Data UserData `json:"data"`
+	Time string   `json:"time" example:"2026-03-16T10:00:00Z"`
 }
